sync look and feel

--- a/templates/application.html
+++ b/templates/application.html
@@ -70,7 +70,7 @@
 									class="fa fa-asterisk pull-right"></span></a>
 						</li>
 						<li>
-							<a href="/alerts"><%= t("Alerts") %> <span
+							<a href="/events"><%= t("Events") %> <span
 									class="fa fa-bell pull-right"></span></a>
 						</li>
 						<li>
