--- a/templates/members/index.html
+++ b/templates/members/index.html
@@ -1,5 +1,9 @@
 <div class="page-header">
 	<h1><%= t("Members") %></h1>
+	<div class="pull-right">
+		<i class="fa fa-question-circle"></i>
+	</div>
+	<div class="description"><%= len(members) %></div>
 </div>
 
 <div class="page-content">
