--- a/templates/profile/show.html
+++ b/templates/profile/show.html
@@ -1,5 +1,9 @@
 <div class="page-header">
 	<h1><%= t("Profile") %></h1>
+	<div class="pull-right">
+		<i class="fa fa-question-circle"></i>
+	</div>
+	<div class="description"><%= member_mail %></div>
 </div>
 
 <div class="page-content">
