--- a/templates/providers/index.html
+++ b/templates/providers/index.html
@@ -1,9 +1,15 @@
 <div class="page-header">
   <h1>Providers</h1>
+	<div class="pull-right">
+		<i class="fa fa-question-circle"></i>
+	</div>
+	<div class="description"><%= len(providers) %></div>
 </div>
 
+<div class="page-content">
 <%= partial("providers/table.html") %>
+</div>
 
-<div class="text-center">
+<div class="page-tail text-center">
   <%= paginator(pagination) %>
 </div>
