--- a/templates/services/index.html
+++ b/templates/services/index.html
@@ -1,17 +1,21 @@
 <div class="page-header">
 	<h1><%= t("Services") %></h1>
+	<div class="pull-right">
+		<i class="fa fa-question-circle"></i>
+	</div>
+	<div class="description"><%= len(services) %></div>
 </div>
 <div class="btn-group pull-right">
 	<a href="<%= newServicesPath()
-		%>" class="btn btn-xs btn-primary"><%= t("Add.New.Service") %></a>
+		%>" class="btn btn-sm btn-default"><%= t("Add.New.Service") %></a>
 </div>
 
 <table class="table table-striped">
 	<thead>
 		<tr>
-			<th>Member</th>
-			<th>Name</th>
-			<th>Description</th>
+			<th><%= t("Member") %></th>
+			<th><%= t("Name") %></th>
+			<th><%= t("Description") %></th>
 			<th>&nbsp;</th>
 		</tr>
 	</thead>
@@ -20,6 +24,6 @@
 	</tbody>
 </table>
 
-<div class="text-center">
+<div class="page-tail text-center">
 	<%= paginator(pagination) %>
 </div>
