--- a/templates/resources/show.html
+++ b/templates/resources/show.html
@@ -65,6 +65,13 @@
 			</div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-sm-12">
+			<h3><%= t("Incidents") %></h3>
+<% let incidents = resource.Incidents %>
+<%= partial("incidents/table.html") %>
+		</div>
+	</div>
 </div>
 
 <div class="page-tail pull-right">
