--- a/templates/services/show.html
+++ b/templates/services/show.html
@@ -56,6 +56,12 @@
 			</table>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-sm-12">
+			<h3><%= t("Incidents") %></h3>
+<%= partial("incidents/table.html") %>
+		</div>
+	</div>
 </div>
 
 <div class="page-tail pull-right">
