--- a/templates/incidents/_table.html
+++ b/templates/incidents/_table.html
@@ -1,10 +1,10 @@
 <table class="table table-striped">
 	<thead>
 		<tr>
-			<th>Category</th>
-			<th>Title</th>
-			<th>Issued</th>
-			<th>By</th>
+			<th><%= t("Category") %></th>
+			<th><%= t("Title") %></th>
+			<th><%= t("Issued") %></th>
+			<th><%= t("Issued.By") %></th>
 		</tr>
 	</thead>
 	<tbody><%= for (incident) in incidents { %>
