--- a/templates/providers/_info.html
+++ b/templates/providers/_info.html
@@ -1,11 +1,11 @@
 <table class="table table-striped">
 	<thead>
 		<tr>
-			<td>Provider</td>
-			<td>Type</td>
-			<td>Original ID</td>
-			<td>Group ID</td>
-			<td>User ID</td>
+			<td><%= t("Provider") %></td>
+			<td><%= t("Type") %></td>
+			<td><%= t("OriginalID") %></td>
+			<td><%= t("GroupID") %></td>
+			<td><%= t("UserID") %></td>
 		</tr>
 	</thead>
 	<tbody>
