--- a/templates/resources/_table_row.html
+++ b/templates/resources/_table_row.html
@@ -1,21 +1,23 @@
-		<tr>
-			<td title="<%= resource.Provider
-				%>/<%= resource.GroupID
-				%>/<%= resource.OriginalID %>">
-				<a href="<%= resourcePath({ resource_id: resource.ID })
-					%>"><%= iconize("status-"+resource.IsOn+"-"+resource.IsConn)
-					%> <%= iconize(resource.Type)
-					%> <%= resource.Name %></a></td>
-			<td title="<%= resource.Location %>"><%= resource.IPAddress %></td>
-			<td class="time" form="YYYY-MM-DD"><%= resource.CreatedAt %></td>
-			<td class="time" form="YYYY-MM-DD"><%= resource.UpdatedAt %></td>
-			<td title="Created: <%= resource.ResourceCreatedAt %>"
-				class="time" form="YYYY-MM-DD"><%= resource.ResourceModifiedAt %></td>
-			<td>
-				<div class="pull-right btn-group">
-					<a href="<%= resourcePath({ resource_id: resource.ID })
-						%>" data-method="DELETE" data-confirm="<%= t("Are you sure")
-						%>" class="btn btn-xs btn-danger"><%= t("Delete") %></a>
-				</div>
-			</td>
-		</tr>
+					<tr>
+						<td title="<%= resource.Provider
+							%>/<%= resource.GroupID
+							%>/<%= resource.OriginalID %>">
+							<a href="<%= resourcePath({ resource_id: resource.ID })
+								%>"> <%= iconize("status-"+resource.IsOn+"-"+resource.IsConn)
+								%> <%= iconize(resource.Type)
+								%> <%= resource.Name %></a>
+						</td>
+						<td title="<%= resource.Location %>"><%= resource.IPAddress %></td>
+						<td class="time" form="YYYY-MM-DD"><%= resource.CreatedAt %></td>
+						<td class="time" form="YYYY-MM-DD"><%= resource.UpdatedAt %></td>
+						<td title="Created: <%= resource.ResourceCreatedAt
+							%>" class="time" form="YYYY-MM-DD"><%= resource.ResourceModifiedAt
+							%></td>
+						<td>
+							<div class="pull-right btn-group">
+								<a href="<%= resourcePath({ resource_id: resource.ID })
+									%>" data-method="DELETE" data-confirm="<%= t("Are you sure")
+									%>" class="btn btn-xs btn-danger"><%= t("Delete") %></a>
+							</div>
+						</td>
+					</tr>
