--- a/templates/profile/show.html
+++ b/templates/profile/show.html
@@ -7,7 +7,10 @@
 </div>
 
 <div class="page-content">
-<%= partial("profile/profile.html") %>
+	<div class="row">
+		<div class="col-sm-12">
+<%= partial("profile/profile.html") %>		</div>
+	</div>
 </div>
 
 <div class="page-tail pull-right">
