--- a/templates/providers/index.html
+++ b/templates/providers/index.html
@@ -7,7 +7,10 @@
 </div>
 
 <div class="page-content">
-<%= partial("providers/table.html") %>
+	<div class="row">
+		<div class="col-sm-12">
+<%= partial("providers/table.html") %>		</div>
+	</div>
 </div>
 
 <div class="page-tail text-center">
