--- a/templates/services/index.html
+++ b/templates/services/index.html
@@ -5,24 +5,18 @@
 	</div>
 	<div class="description"><%= len(services) %></div>
 </div>
-<div class="btn-group pull-right">
-	<a href="<%= newServicesPath()
-		%>" class="btn btn-sm btn-default"><%= t("Add.New.Service") %></a>
-</div>
 
-<table class="table table-striped">
-	<thead>
-		<tr>
-			<th><%= t("Member") %></th>
-			<th><%= t("Name") %></th>
-			<th><%= t("Description") %></th>
-			<th>&nbsp;</th>
-		</tr>
-	</thead>
-	<tbody><%= for (service) in services { %>
-<%= partial("services/table_row.html") %><% } %>
-	</tbody>
-</table>
+<div class="page-content">
+	<div class="btn-group pull-right">
+		<a href="<%= newServicesPath()
+			%>" class="btn btn-sm btn-default"><%= t("Add.New.Service") %></a>
+	</div>
+
+	<div class="row">
+		<div class="col-sm-12">
+<%= partial("services/table.html") %>		</div>
+	</div>
+</div>
 
 <div class="page-tail text-center">
 	<%= paginator(pagination) %>
