relationship between services and resources

--- a/templates/incidents/_table.html
+++ b/templates/incidents/_table.html
@@ -2,6 +2,7 @@
 				<thead>
 					<tr>
 						<th><%= t("Category") %></th>
+						<th><%= t("Code") %></th>
 						<th><%= t("Title") %></th>
 						<th><%= t("Issued") %></th>
 						<th><%= t("Issued.By") %></th>
@@ -16,6 +17,7 @@
 							%>/<%= incident.OriginalID
 							%>/<%= incident.IssuedBy
 							%>"><%= incident.Category %></td>
+						<td><%= incident.Code %></td>
 						<td><a href="<%= incidentPath({ incident_id: incident.ID })
 							%>"><%= incident.Title %></a></td>
 						<td class="time"><%= incident.IssuedAt %></td>
