--- a/templates/resources/show.html
+++ b/templates/resources/show.html
@@ -14,20 +14,9 @@
 
 <div class="page-content">
 	<div class="row">
-		<div class="col-sm-6">
+		<div class="col-sm-12">
 			<h3><%= t("Linked.Services") %></h3>
-		</div>
-		<div class="col-sm-6">
-			<h3><%= t("Ownerships") %></h3>
-			<div><%= for (p) in resource.Providers { %>
-				<i class="fa fa-caret-right x-list-header"></i>
-				<a href="<%= memberPath({ member_id: p.Member.ID })
-					%>" class="mixin-normal"><i class="fa fa-user"></i> <%= p.Member
-					%></a> <a title="Group/User: <%= p.GroupID %>/<%= p.UserID
-					%>" class="mixin-normal"><i class="fa fa-link"></i> <%= p
-					%></a><% } %>
-			</div>
-		</div>
+<%= partial("services/table.html") %>		</div>
 	</div>
 	<div class="row">
 		<div class="col-sm-6">
@@ -69,6 +58,15 @@
 							%></td><td><%= attr.Value %></td></tr><% } %>
 				</tbody>
 			</table>
+			<h3><%= t("Ownerships") %></h3>
+			<div><%= for (p) in resource.Providers { %>
+				<i class="fa fa-caret-right x-list-header"></i>
+				<a href="<%= memberPath({ member_id: p.Member.ID })
+					%>" class="mixin-normal"><i class="fa fa-user"></i> <%= p.Member
+					%></a> <a title="Group/User: <%= p.GroupID %>/<%= p.UserID
+					%>" class="mixin-normal"><i class="fa fa-link"></i> <%= p
+					%></a><% } %>
+			</div>
 			<h3><%= t("Tags") %></h3>
 			<div><%= for (tag) in resource.Tags { %>
 				<a class="x-tag"><i class="fa fa-tag"></i> <%= tag.Name %></a> <% } %>
