upgraded assets with recent versions

--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -1,4 +1,9 @@
-@import "~bootstrap-sass/assets/stylesheets/_bootstrap-sprockets.scss";
-@import "~bootstrap-sass/assets/stylesheets/_bootstrap.scss";
-@import "~font-awesome/css/font-awesome.css";
+@import "~bootstrap/scss/bootstrap.scss";
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
+@import "~easymde/dist/easymde.min.css";
+@import "~highlight.js/styles/stackoverflow-dark.css";
 @import "~awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css";
+
+//@import "hyeoncheon";
+@import "honcheonui";
+@import "overrides";
