--- a/assets/css/_honcheonui.scss
+++ b/assets/css/_honcheonui.scss
@@ -9,6 +9,8 @@
  * https://bootsnipp.com/snippets/3xjDn
  */
 
+@use "sass:math";
+
 $font-base: 'Open Sans','Noto Sans KR','Helvetica Neue',sans-serif;
 $font-head: 'Open Sans','NanumSquare','Helvetica Neue',sans-serif;
 $font-type: Monaco, "Ubuntu Mono", "Courier New", monospace !important;
@@ -111,7 +113,7 @@ h1, h2, h3, h4, h5, h6 {
 		}
 		#user-profile {
 			height: $header-height;
-			padding-top: ($header-height - $header-avatar-size) / 2;
+			padding-top: math.div($header-height - $header-avatar-size, 2);
 			padding-left: 20px;
 			img {
 				height: $header-avatar-size;
@@ -168,7 +170,7 @@ a.x-tag,
 	padding-right: 10px;
 }
 .description {
-	border-left: 5px solid $color-matt - #222;
+	border-left: 5px solid darken($color-matt, 5%);
 	padding-left: 10px;
 }
 
